--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
     </div>
 
 
+
+    <!-- <div class="large-container">
+        <div class="large-img-container">
+            <div class="title-block">
+                <div class="author">
+                    <p><img src="${data.hits[single].userImageURL?data.hits[single].userImageURL:"https://pixabay.com/static/img/logo_square.png"}" alt=""> <span>${data.hits[single].user}</span></p>
+                </div>
+                <div class="img-by">
+                    <a href="https://pixabay.com/">
+                        <img src="https://pixabay.com/static/img/logo.svg" style="width:94px">
+                    </a>
+                </div>
+                <div class="right-block">
+                    <p><span class="material-icons">add_comment</span> <a href="${data.hits[single].largeImageURL}/#comments">${data.hits[single].largeImageURL}</a></p>
+                </div>
+            </div>
+            <div class="close-button" onclick = "closeImgbox()"><span class="material-icons">close</span></div>
+            <figure>
+                <img src="https://pixabay.com/get/57e8d0424856aa14f6da8c7dda79367a163ddaec55536c48732f7fd29149c65ebe_1280.jpg" alt="">
+            </figure>
+        </div>
+    </div> -->
+
+
         
     
     <script src="script.js"></script>
