--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </div>
     
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+
 
     
 
